# Peregrine-Hypervisor

./: .clang-format  .clang-tidy  .clang_complete  .gitignore  .gitmodules  .gn  .skip_file  AUTHORS  BUILD.gn  LICENSE  LICENSE.bsd-3  Makefile  README.md  run_cloc.sh  run_static_analysis.sh  skip_file  static_analysis_gen_html.sh
docs/: Architecture.md  CodeStructure.md  GettingStarted.md  SchedulerExpectations.md  StyleGuide.md  Testing.md
driver/linux/: .clang_complete  .gitrepo  BUILD.gn  Makefile  main.c
driver/linux/brkernmod/: Config.in  Makefile  external.desc  external.mk
driver/linux/inc/uapi/pg/: socket.h
inc/pg/: abort.h  addr.h  api.h  boot_flow.h  boot_params.h  check.h  cpio.h  cpu.h  dlog.h  error.h  fdt.h  fdt_handler.h  ffa_internal.h  interrupt_desc.h  io.h  layout.h  list.h  load.h  manifest.h  manifest_util.h  memiter.h  mm.h  mpool.h  offset_size_header.h  panic.h  pma.h  spinlock.h  static_assert.h  std.h  stdout.h  string.h  uuid.h  vcpu.h  vm.h
inc/pg/arch/: addr_translator.h  cache.h  cpu.h  emulator.h  init.h  irq.h  mm.h  stack_protector.h  timer.h  virt_devs.h  virtioac.h  vm.h
inc/pg/arch/plat/: ffa.h  prng.h  psci.h  smc.h
inc/pg/plat/: boot_flow.h  console.h  interrupts.h  iommu.h
inc/system/sys/: cdefs.h
inc/vmapi/pg/: abi.h  call.h  ffa.h  transport.h  types.h  vm_ids.h
kokoro/: build.sh  ci_run.py  test.sh  test_common.sh  test_spmc.sh
src/: BUILD.gn  abort.c  api.c  cpio.c  cpu.c  dlog.c  error.c  fdt.c  fdt_handler.c  fdt_handler_test.cc  fdt_test.cc  init.c  layout.c  layout_fake.c  load.c  main.c  manifest.c  manifest_util.c  memiter.c  mm.c  mm_test.cc  mm_test.hh  mpool.c  mpool_test.cc  panic.c  pma.c  pma_test.cc  pma_test.hh  std.c  std_test.cc  stdout.c  string.c  string_test.cc  uuid.c  uuid_test.cc  vcpu.c  vm.c  vm_test.cc
src/arch/aarch64/: BUILD.gn  addr_translator.c  args.gni  cache_helpers.S  emulator.c  entry.S  exception_macros.S  irq.c  mm.c  msr.h  psci.h  smc.c  smc.h  stack_protector.c  std.c  sysregs.c  sysregs.h  timer.c  virt_devs.c  virtioac.c
src/arch/aarch64/arm_smmuv3/: BUILD.gn  args.gni  arm_smmuv3.c  arm_smmuv3.h
src/arch/aarch64/boot_flow/: BUILD.gn  android.S  linux.S
src/arch/aarch64/hftest/: BUILD.gn  cpu_entry.S  entry.S  events.c  exceptions.S  interrupts.c  interrupts_gicv3.c  mm.c  power_mgmt.c  registers.c  state.c  stdout.c
src/arch/aarch64/hypervisor/: BUILD.gn  arch_init.c  cpu.c  debug_el1.c  debug_el1.h  default_mediator.c  exceptions.S  feature_id.c  feature_id.h  ffa.c  handler.c  hypervisor_entry.S  mediator.c  offsets.c  perfmon.c  perfmon.h  plat_entry.S  psci_handler.c  psci_handler.h  vm.c
src/arch/aarch64/imx/: BUILD.gn  args.gni  uart.c
src/arch/aarch64/inc/pg/arch/: barriers.h  mmu.h  spinlock.h  std.h  sve.h  types.h  vmid_base.h
src/arch/aarch64/inc/pg/arch/vm/: events.h  interrupts.h  interrupts_gicv3.h  mm.h  power_mgmt.h  registers.h  state.h  timer.h
src/arch/aarch64/pl011/: BUILD.gn  args.gni  pl011.c
src/arch/aarch64/plat/interrupts/: BUILD.gn  absent.c  gicv3.c  gicv3_helpers.h
src/arch/aarch64/plat/prng/: BUILD.gn  absent.c  prng.c
src/arch/aarch64/plat/psci/: BUILD.gn  hypervisor.c  spmc.c
src/arch/aarch64/plat/smc/: absent.c
src/arch/aarch64/qemuloader/: BUILD.gn  entry.S  fwcfg.c  fwcfg.h  loader.c
src/arch/aarch64/virt_devs/: BUILD.gn  anatop.c  clock_ctrl.c  imx_uart.c  iomux.c  sanct_uart.c
src/arch/fake/: BUILD.gn  cache.c  console.c  mm.c  smc.c  smc.h  timer.c
src/arch/fake/hftest/: BUILD.gn  power_mgmt.c
src/arch/fake/hypervisor/: BUILD.gn  cpu.c  ffa.c  vm.c
src/arch/fake/inc/pg/arch/: barriers.h  spinlock.h  std.h  types.h  vmid_base.h
src/arch/fake/inc/pg/arch/vm/: power_mgmt.h
src/boot_flow/: BUILD.gn  android.c  common.c  linux.c  spmc.c
src/iommu/: BUILD.gn  absent.c
test/arch/: BUILD.gn  dlog_test.c  mm_test.c
test/arch/aarch64/: BUILD.gn
test/hftest/: BUILD.gn  args.gni  common.c  ctrl_fdt.c  ctrl_uart.c  device_psci.c  hftest.py  hftest_common.h  linux_main.c  mm.c  power_mgmt.c  secondary_no_fdt.c  secure_service.c  service.c  service_common.c  standalone_main.c  standalone_main_secure.c
test/inc/test/: abort.h  hftest.h  hftest_impl.h
test/linux/: BUILD.gn  hftest_socket.c  linux.c  manifest.dts
test/vmapi/: BUILD.gn  fvp-base-spmc.dts
test/vmapi/arch/aarch64/: BUILD.gn  arch_features.c  manifest.dts  smc_whitelist.c  smccc.c
test/vmapi/arch/aarch64/gicv3/: BUILD.gn  busy_secondary.c  gicv3.c  interrupts.c  manifest.dts  secondary.dts  timer_secondary.c
test/vmapi/arch/aarch64/gicv3/inc/: gicv3.h
test/vmapi/arch/aarch64/gicv3/services/: BUILD.gn  busy.c  common.c  common.h  interrupts.c  systemreg.c  timer.c
test/vmapi/arch/aarch64/trusty/: BUILD.gn  manifest.dts  trusty.c
test/vmapi/common/: BUILD.gn  exception_handler.c  ffa.c
test/vmapi/ffa_secure_partition_only/: BUILD.gn  manifest.dts  partition-manifest.dts  secure_partition.c
test/vmapi/ffa_secure_partitions/: BUILD.gn  manifest.dts  manifest_control_sp.dts  manifest_services_sp.dts  partition_control.c  partition_manifest_control_sp.dts  partition_manifest_nwd_primary.dts  partition_manifest_services_sp.dts  secure_partition_services.c
test/vmapi/primary_only/: BUILD.gn  faults.c  manifest.dts  primary_only.c
test/vmapi/primary_only_ffa/: BUILD.gn  manifest.dts  partition-manifest.dts  primary_only_ffa.c
test/vmapi/primary_with_secondaries/: BUILD.gn  boot.c  debug_el1.c  ffa.c  floating_point.c  interrupts.c  mailbox.c  manifest.dts  manifest_no_fdt.dts  memory_sharing.c  no_fdt.c  no_fdt_secondary.c  no_services.c  perfmon.c  run_race.c  smp.c  sysregs.c  sysregs.h  unmapped.c
test/vmapi/primary_with_secondaries/inc/: primary_with_secondary.h
test/vmapi/primary_with_secondaries/services/: BUILD.gn  boot.c  check_state.c  debug_el1.c  echo.c  echo_with_notification.c  ffa_check.c  floating_point.c  interruptible.c  interruptible_echo.c  memory.c  perfmon.c  receive_block.c  relay.c  run_waiting.c  smp.c  unmapped.c  wfi.c
vmlib/: BUILD.gn  ffa.c
vmlib/aarch64/: BUILD.gn  call.c
(+9 files in other folders)
