# SPDX-FileCopyrightText: 2018 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

# The location of the build configuration file.
buildconfig = "//build/BUILDCONFIG.gn"

# Force use of Python 3
script_executable = "python3"
