# SPDX-FileCopyrightText: 2018 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

# The root of the build redirects to a project build file so each project can
# select the artifacts it needs to build.

# The root of the build.
group("root") {
  deps = [
    "//project/${project}:root",
  ]
}

# The root of the build for test artifacts.
group("test_root") {
  testonly = true

  deps = [
    "//project/${project}:test_root",
  ]
}

group("default") {
  testonly = true
  deps = [
    ":root",
    ":test_root",
  ]
}
