# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("//build/linux/linux.gni")

linux_kernel_module("linux") {
  module_name = "hafnium"
  kernel_target = "//third_party/linux:linux"
  kernel_dir = "//third_party/linux"
}
