# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("//build/toolchain/platform.gni")

declare_args() {
  boot_flow_android_initrd_addr = 0
  boot_flow_android_initrd_size = 0
}

source_set("common") {
  sources = [
    "common.c",
  ]
}

source_set("android") {
  sources = [
    "android.c",
  ]
  deps = [
    ":common",
    "//src/arch/${plat_arch}/boot_flow:android",
  ]
  defines = [
    "INITRD_ADDR=${boot_flow_android_initrd_addr}",
    "INITRD_SIZE=${boot_flow_android_initrd_size}",
  ]
}

source_set("linux") {
  sources = [
    "linux.c",
  ]
  deps = [
    ":common",
    "//src/arch/${plat_arch}/boot_flow:linux",
  ]
}

source_set("spmc") {
  sources = [
    "spmc.c",
  ]
  deps = [
    ":common",
    "//src/arch/${plat_arch}/boot_flow:linux",
  ]
}
