# SPDX-FileCopyrightText: 2018 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

group("arch") {
  testonly = true

  deps = [
    ":arch_test",
    "${plat_arch}",
  ]
}

hypervisor("arch_test") {
  testonly = true

  sources = [
    "dlog_test.c",
    "mm_test.c",
  ]

  deps = [
    "//src/arch/${plat_arch}:arch",
    "//test/hftest:hftest_hypervisor",
  ]
}
