# SPDX-FileCopyrightText: 2018 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

group("vmapi") {
  testonly = true

  deps = [
    "arch/${plat_arch}:arch",
    "common:common",
    "ffa_secure_partition_only:ffa_secure_partition_only_test",
    "ffa_secure_partitions:ffa_both_world_partitions_test",
    "ffa_secure_partitions:ffa_secure_partitions_test",
    "primary_only:primary_only_test",
    "primary_only_ffa:primary_only_ffa_test",
    "primary_with_secondaries:primary_with_secondaries_no_fdt",
    "primary_with_secondaries:primary_with_secondaries_test",
  ]
}
