# Copyright (c) 2023 SANCTUARY Systems GmbH
#
# This file is free software: you may copy, redistribute and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation, either version 2 of the License, or (at your
# option) any later version.
#
# This file is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.
#
# For a commercial license, please contact SANCTUARY Systems GmbH
# directly at info@sanctuary.dev
#
# This file incorporates work covered by the following copyright and
# permission notice:
#
#     Copyright 2018 The Hafnium Authors.
#
#     Use of this source code is governed by a BSD-style
#     license that can be found in the LICENSE file or at
#     https://opensource.org/licenses/BSD-3-Clause.

import("args.gni")
import("//build/toolchain/platform.gni")

config("config") {
  include_dirs = [ "." ]
}

config("arch_config") {
  assert(enable_vhe == "0" || enable_vhe == "1",
         "enable_vhe is set to <${enable_vhe}>")
  defines = [
    "ENABLE_VHE=${enable_vhe}",
  ]
}

# Implementation of the arch interface for aarch64.
source_set("arch") {
  public_configs = [ "//src/arch/aarch64:arch_config" ]
  sources = [
    "cache_helpers.S",
    "irq.c",
    "mm.c",
    "sysregs.c",
    "timer.c",
    "addr_translator.c",
    "emulator.c",
    "virtioac.c",
    "virt_devs.c",
  ]

  deps = [
    "//src/arch/aarch64/virt_devs:virt_devs",
  ]
}

source_set("std") {
  sources = [
    "stack_protector.c",
    "std.c",
  ]
}

# Entry code to prepare the loaded image to be run.
source_set("entry") {
  sources = [
    "entry.S",
  ]
}

# Make a call to the secure monitor.
source_set("smc") {
  sources = [
    "smc.c",
  ]
}

source_set("src_testable") {
  public_configs = [ "//src/arch/${plat_arch}:arch_config" ]
  deps = [
    "//src/arch/${plat_arch}/hypervisor",
    "//src/arch/${plat_arch}/hypervisor:src_testable"
  ]
}
