# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

declare_args() {
  # PSCI hooks to be used for the platform, specified as build target.
  plat_psci = "//src/arch/aarch64/plat/psci:hypervisor"

  # SMC hooks to be used for the platform, specified as build target.
  plat_smc = "//src/arch/aarch64/plat/smc:absent"

  plat_interrupts = "//src/arch/aarch64/plat/interrupts:absent"

  # Pseudo random numbers source. Used for pointer authentication.
  plat_prng = "//src/arch/aarch64/plat/prng:absent"

  enable_vhe = "0"
}
