# Copyright (c) 2023 SANCTUARY Systems GmbH
#
# This file is free software: you may copy, redistribute and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation, either version 2 of the License, or (at your
# option) any later version.
#
# This file is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.
#
# For a commercial license, please contact SANCTUARY Systems GmbH
# directly at info@sanctuary.dev
#
# This file incorporates work covered by the following copyright and
# permission notice:
#
#     Copyright 2019 The Hafnium Authors.
#
#     Use of this source code is governed by a BSD-style
#     license that can be found in the LICENSE file or at
#     https://opensource.org/licenses/BSD-3-Clause.

declare_args() {
  # PSCI hooks to be used for the platform, specified as build target.
  plat_psci = "//src/arch/aarch64/plat/psci:hypervisor"

  # SMC hooks to be used for the platform, specified as build target.
  plat_smc = "//src/arch/aarch64/plat/smc:absent"

  plat_interrupts = "//src/arch/aarch64/plat/interrupts:absent"

  # Pseudo random numbers source. Used for pointer authentication.
  plat_prng = "//src/arch/aarch64/plat/prng:absent"

  enable_vhe = "0"
}
