# SPDX-FileCopyrightText: 2018 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("//build/toolchain/platform.gni")

config("arch_config") {
}

source_set("arch") {
  sources = [
    "cache.c",
    "mm.c",
    "timer.c",
    "smc.c"
#    "std.c",
  ]
}

# Empty implementation of platform boot flow.
# Fake arch targets should not depend on the boot flow functions. Will fail to
# compile if they do.
source_set("boot_flow") {
}

# Fake implementation of putchar logs to the console.
source_set("console") {
  sources = [
    "console.c",
  ]
}

# Empty, as the functions are provided by libc already.
#source_set("std") {
#}
source_set("src_testable") {

  public_configs = [ "//src/arch/fake:arch_config" ]
  deps = [
    "//src/arch/${plat_arch}/hypervisor:src_testable"
  ]
}
