# SPDX-FileCopyrightText: 2020 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

group("aarch64") {
  testonly = true

  deps = [
    ":aarch64_test",
  ]
}

hypervisor("aarch64_test") {
  testonly = true

  sources = [
  ]

  deps = [
    "//src:vm",
    "//src/arch/${plat_arch}/hypervisor:vm",
    "//test/hftest:hftest_hypervisor",
  ]
}
