# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/image/image.gni")

source_set("common") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]
  sources = [
    "exception_handler.c",
    "ffa.c",
  ]
  include_dirs = [ "//src/arch/aarch64" ]
}
