# SPDX-FileCopyrightText: 2018 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/image/image.gni")
import("//test/hftest/args.gni")

# Tests with no secondary VMs.
vm_kernel("primary_only_test_vm") {
  testonly = true

  sources = [
    "faults.c",
    "primary_only.c",
  ]

  deps = [
    "//test/hftest:hftest_primary_vm",
    "//test/vmapi/common",
  ]
}

manifest("primary_only_test_manifest") {
  source = "manifest.dts"
  output = "manifest.dtb"
  overlay = hftest_manifest_overlay
}

initrd("primary_only_test") {
  testonly = true
  files = [
    [
      "manifest.dtb",
      ":primary_only_test_manifest",
      "manifest.dtb",
    ],
    [
      "primary_only_test",
      ":primary_only_test_vm",
      "primary_only_test_vm.bin",
    ],
  ]
}
