# SPDX-FileCopyrightText: 2021 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("args.gni")

# Arm SMMUv3 driver for stage2 translation of streams.
source_set("arm_smmuv3") {
  public_configs = [ "//src/arch/aarch64:arch_config" ]
  sources = [
    "arm_smmuv3.c",
  ]

  assert(defined(smmu_base_address),
         "\"smmu_base_address\" must be defined for ${target_name}.")
  assert(defined(smmu_memory_size),
         "\"smmu_memory_size\" must be defined for ${target_name}.")

  defines = [
    "SMMUv3_BASE=${smmu_base_address}",
    "SMMUv3_MEM_SIZE=${smmu_memory_size}",
  ]
}
