# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("//build/toolchain/offset_size_header.gni")
import("//build/toolchain/platform.gni")
import("//src/arch/aarch64/args.gni")

offset_size_header("offsets") {
  sources = [
    "offsets.c",
  ]
  path = "pg/arch/offsets.h"
}

source_set("vm") {
  public_configs = [ "//src/arch/aarch64:config" ]
  deps = [
      "//src:vm",
  ]
}

# Hypervisor specific code.
source_set("hypervisor") {
  public_configs = [
    "//src/arch/aarch64:config",
    "//src/arch/aarch64:arch_config",
  ]
  sources = [
    "exceptions.S",
    "hypervisor_entry.S",
    "plat_entry.S",
  ]

  sources += [
    "arch_init.c",
    "cpu.c",
    "debug_el1.c",
    "feature_id.c",
    "ffa.c",
    "handler.c",
    "perfmon.c",
    "psci_handler.c",
    "vm.c",
  ]

  deps = [
    ":offsets",
    "//src/arch/aarch64:arch",
    "//src/arch/aarch64:entry",
    "//src/arch/aarch64:smc",
    "//src:vm",
    plat_interrupts,
    plat_prng,
    plat_psci,
    plat_smc,
  ]
}

source_set("src_testable") {
  sources = [
    "mediator.c",
    "default_mediator.c"
  ]
}
