# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("args.gni")

# aarch64 PL011 implementation of putchar for debugging.
source_set("pl011") {
  sources = [
    "pl011.c",
  ]
  deps = [
    "//src/arch/aarch64:arch",
  ]

  assert(defined(uart_clock),
         "\"uart_clock\" must be defined for ${target_name}.")

  assert(defined(uart_baudrate),
         "\"uart_baudrate\" must be defined for ${target_name}.")

  defines = [
    "UART_CLOCK=${uart_clock}",
    "UART_BAUDRATE=${uart_baudrate}",
  ]
}
