# SPDX-FileCopyrightText: 2020 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

# The bootloader image.
image_binary("qemuloader") {
  image_name = "qemuloader"
  deps = [
    ":loader",
  ]
}

source_set("loader") {
  public_configs = [
    "//src/arch/aarch64:config",
    "//third_party/dtc:libfdt_config",
  ]
  sources = [
    "entry.S",
    "fwcfg.c",
    "loader.c",
  ]

  deps = [
    "//src:abort",
    "//src:dlog",
    "//src:layout",
    "//src:panic",
    "//src/arch/${plat_arch}:entry",
    "//third_party/dtc:libfdt",
  ]
}

copy("tfa_trusty_copy") {
  sources = [
    "//prebuilts/linux-aarch64/trusted-firmware-a-trusty/qemu/bl2.bin",
    "//prebuilts/linux-aarch64/trusted-firmware-a-trusty/qemu/bl31.bin",
    "//prebuilts/linux-aarch64/trusted-firmware-a-trusty/qemu/bl32.bin",
  ]
  outputs = [
    "$root_out_dir/{{source_file_part}}",
  ]
}

copy("qemuloader_copy") {
  sources = [
    "$root_out_dir/qemuloader.bin",
  ]
  deps = [
    ":qemuloader",
  ]
  outputs = [
    "$root_out_dir/bl33.bin",
  ]
}

group("bl") {
  deps = [
    ":qemuloader_copy",
    ":tfa_trusty_copy",
  ]
}
