# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

# These components are only used by tests running until Linux VMs.

# Shutdown the system.
source_set("power_mgmt") {
  testonly = true
  sources = [
    "power_mgmt.c",
  ]
}
