# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.
import("//build/toolchain/platform.gni")

config("arch_config") {
}


source_set("hypervisor") {
  sources = [
    "cpu.c",
    "ffa.c",
    "vm.c",
  ]
  deps = [
    "//src/arch/fake:arch",
  ]
}

source_set("vm") {
  deps = [
      "//src:vm",
  ]
}

source_set("src_testable") {
  public_configs = [ "//src/arch/${plat_arch}:arch_config" ]
}
