# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/toolchain/platform.gni")

config("arch_config") {
}


source_set("hypervisor") {
  sources = [
    "cpu.c",
    "ffa.c",
    "vm.c",
  ]
  deps = [
    "//src/arch/fake:arch",
  ]
}

source_set("vm") {
  deps = [
      "//src:vm",
  ]
}

source_set("src_testable") {
  public_configs = [ "//src/arch/${plat_arch}:arch_config" ]
}
