# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/image/image.gni")
import("//test/hftest/args.gni")

group("arch") {
  testonly = true

  deps = [
    ":aarch64_test",
    "trusty:trusty_test",
  ]
}

# Tests specific to aarch64.
vm_kernel("aarch64_test_vm") {
  testonly = true
  public_configs = [ "//src/arch/aarch64:config" ]

  sources = [
    "arch_features.c",
    "smc_whitelist.c",
    "smccc.c",
  ]

  deps = [
    "//src/arch/aarch64:arch",
    "//test/hftest:hftest_primary_vm",
  ]
}

manifest("aarch64_test_manifest") {
  source = "manifest.dts"
  output = "manifest.dtb"
  overlay = hftest_manifest_overlay
}

initrd("aarch64_test") {
  testonly = true

  files = [
    [
      "manifest.dtb",
      ":aarch64_test_manifest",
      "manifest.dtb",
    ],
    [
      "aarch64_test",
      ":aarch64_test_vm",
      "aarch64_test_vm.bin",
    ],
  ]
}
