# SPDX-FileCopyrightText: 2021 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("//build/toolchain/platform.gni")

source_set("absent") {
  sources = [
    "absent.c",
  ]
}

source_set("prng") {
  public_configs = [ "//src/arch/${plat_arch}:config" ]
  sources = [
    "prng.c",
  ]
}
