# SPDX-FileCopyrightText: 2020 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/toolchain/platform.gni")

source_set("hypervisor") {
  public_configs = [ "//src/arch/${plat_arch}:config" ]
  sources = [
    "hypervisor.c",
  ]
}

source_set("spmc") {
  public_configs = [ "//src/arch/${plat_arch}:config" ]
  sources = [
    "spmc.c",
  ]
}
