# SPDX-FileCopyrightText: 2020 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: GPL-2.0-only

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

config("config") {
  include_dirs = [ "inc" ]
}

# Tests specific to communication with Trusty in Secure World.
vm_kernel("trusty_test_vm") {
  testonly = true
  public_configs = [ ":config" ]

  sources = [
    "trusty.c",
  ]

  deps = [
    "//src/arch/aarch64:arch",
    "//test/hftest:hftest_primary_vm",
    "//test/vmapi/common",
    "//vmlib",
  ]
}

manifest("trusty_test_manifest") {
  source = "manifest.dts"
  output = "manifest.dtb"
}

initrd("trusty_test") {
  testonly = true

  files = [
    [
      "manifest.dtb",
      ":trusty_test_manifest",
      "manifest.dtb",
    ],
    [
      "trusty_test",
      ":trusty_test_vm",
      "trusty_test_vm.bin",
    ],
  ]
}
