# SPDX-FileCopyrightText: 2019 The Hafnium Authors.
# SPDX-FileCopyrightText: 2023 SANCTUARY Systems GmbH.
# SPDX-License-Identifier: BSD-3-Clause OR GPL-2.0-only

import("//build/image/image.gni")

source_set("common") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]
  sources = [
    "common.c",
  ]
}

# Service which loops forever.
source_set("busy") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]

  sources = [
    "busy.c",
  ]

  deps = [
    ":common",
  ]
}

# Service waiting for a direct message request.
source_set("interrupts") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]

  sources = [
    "interrupts.c",
  ]

  deps = [
    ":common",
  ]
}

# Service which uses timers.
source_set("timer") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]

  sources = [
    "timer.c",
  ]

  deps = [
    ":common",
    "//src/arch/aarch64:arch",
    "//src/arch/aarch64/hftest:interrupts",
  ]
}

# Service which tries to access GICv3 system registers.
source_set("systemreg") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]

  sources = [
    "systemreg.c",
  ]

  deps = [
    ":common",
    "//src/arch/aarch64:arch",
  ]

  include_dirs = [
    "//test/vmapi/common",
    "//inc/vmapi/hf",
  ]
}

# Group services together into VMs.

vm_kernel("gicv3_service_vm1") {
  testonly = true

  deps = [
    ":busy",
    ":interrupts",
    ":systemreg",
    ":timer",
    "//test/hftest:hftest_secondary_vm",
    "//test/vmapi/common:common",
  ]
}
